<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.aphrodite.obtainstudents.ui.activity.ObStudentActivity">

    <Button
        android:id="@+id/obtain_students"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/get_student_info"/>

    <Button
        android:id="@+id/request_get"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/obtain_students"
        android:layout_centerHorizontal="true"
        android:text="@string/request_get_info"/>

    <Button
        android:id="@+id/request_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/request_get"
        android:layout_centerHorizontal="true"
        android:text="@string/request_post_info"/>

    <Button
        android:id="@+id/upload_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/request_post"
        android:layout_centerHorizontal="true"
        android:text="@string/upload_file_info"/>

    <Button
        android:id="@+id/download_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/upload_file"
        android:layout_centerHorizontal="true"
        android:text="@string/download_file_info"/>

    <Button
        android:id="@+id/download_file_break_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/download_file"
        android:layout_centerHorizontal="true"
        android:text="@string/download_file_break_point_info"/>

    <TextView
        android:id="@+id/result_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:id="@+id/download_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>
</RelativeLayout>
